# overkill-cyclometer

./: README.md
ecu/v2-system-design/: bikECU-v2-sysdesign-cache.lib  bikECU-v2-sysdesign.sch
hw/bikECU-v2.1-PCB/: MCU_RaspberryPi_and_Boards.lib  OCM_logo.kicad_mod  PCBway_logo.kicad_mod  bikECU-v2.1-PCB.kicad_pcb  bikECU-v2.1-PCB.kicad_pro  bikECU-v2.1-PCB.kicad_sch  fp-lib-table  sym-lib-table
hw/bikECU-v2.1-PCB/RP2040_Connect.pretty/: README.txt  RP2040_Connect.kicad_mod
mechanical/ecu-v2-housing/: UltimateWaterproofCase_V6.json  UltimateWaterproofCase_V6.scad  v2_housing_prototype_r3_bottom.3mf  v2_housing_prototype_r3_bottom.stl
mechanical/oled-housing/: oled_base.stl  oled_lid.stl
mechanical/sensor-spacer/: spacer.scad
sw/: CMakeLists.txt  SeeedGrayOLED.cpp  SeeedGrayOLED.h  app.cpp  app.hpp  clock.cpp  devprop.cpp  devprop.hpp  draw.cpp  draw.hpp  ds3231.cpp  ds3231.hpp  libretro_main.cpp  main.cpp  properties.yml  storage.cpp  storage.hpp
sw/devprop/: cobs.c  cobs.h  devprop.h  devprop_can_ext_v1.c  devprop_can_ext_v1.h
sw/doc/: STORAGE.md
